[gd_scene load_steps=6 format=3 uid="uid://bnjj4rdfcgq45"]

[ext_resource type="Theme" uid="uid://ir4rfq0nqkt0" path="res://Assets/UI/UITheme.tres" id="1_flopy"]
[ext_resource type="Script" path="res://Scenes/pause_menu.gd" id="1_w8sia"]
[ext_resource type="Texture2D" uid="uid://bjhc7l56ei2re" path="res://Assets/UI/Mute Button unmuted1.png" id="2_goh1c"]
[ext_resource type="Texture2D" uid="uid://0v86nmf3cg1f" path="res://Assets/UI/Mute Button muted1.png" id="3_xj1u0"]
[ext_resource type="PackedScene" uid="uid://chu0dwdl7kso5" path="res://Scenes/instruct.tscn" id="5_qrjvx"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
script = ExtResource("1_w8sia")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -79.0
offset_right = 93.0
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_flopy")

[node name="Music" type="Node2D" parent="Panel"]
position = Vector2(-110, -65)
scale = Vector2(0.8, 0.8)

[node name="MusicLabel" type="Label" parent="Panel/Music"]
offset_left = 170.0
offset_top = 110.0
offset_right = 220.0
offset_bottom = 136.0
scale = Vector2(1.2, 1.2)
theme = ExtResource("1_flopy")
text = "Muzik:
"
metadata/_edit_use_anchors_ = true

[node name="MusicButton" type="TextureButton" parent="Panel/Music"]
offset_left = 250.0
offset_top = 101.0
offset_right = 285.0
offset_bottom = 136.0
toggle_mode = true
texture_normal = ExtResource("2_goh1c")
texture_pressed = ExtResource("3_xj1u0")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="SFX" type="Node2D" parent="Panel"]
position = Vector2(-110, -69)
scale = Vector2(0.8, 0.8)

[node name="SFXLabel" type="Label" parent="Panel/SFX"]
offset_left = 170.0
offset_top = 160.0
offset_right = 210.0
offset_bottom = 186.0
scale = Vector2(1.2, 1.2)
theme = ExtResource("1_flopy")
text = "SFX:"
metadata/_edit_use_anchors_ = true

[node name="SFXButton" type="TextureButton" parent="Panel/SFX"]
offset_left = 250.0
offset_top = 154.0
offset_right = 285.0
offset_bottom = 189.0
toggle_mode = true
texture_normal = ExtResource("2_goh1c")
texture_pressed = ExtResource("3_xj1u0")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 110.0
offset_right = 177.0
offset_bottom = 174.0
alignment = 1

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Sambung Peringkat"

[node name="Controls" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Kawalan
"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Keluar ke Menu Utama"

[node name="Instruct" parent="Panel" instance=ExtResource("5_qrjvx")]
visible = false
layout_mode = 1
offset_left = 0.5
offset_top = -31.5
offset_right = 0.5
offset_bottom = -31.5
scale = Vector2(0.6, 0.6)

[connection signal="pressed" from="Panel/Music/MusicButton" to="." method="_on_music_button_pressed"]
[connection signal="pressed" from="Panel/SFX/SFXButton" to="." method="_on_sfx_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
